force-app/main/default/objects/Technician__c/fields/Skil_Level__c.field-meta.xml
<CustomField>
    <fullName>Skil_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Specialist</fullName>
            </value>
            <value>
                <fullName>MotherBoard</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Performence</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>TouchPad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>