force-app/main/default/objects/Technician__c/fields/Technician_Phone__c.field-meta.xml
<CustomField>
    <fullName>Technician_Phone__c</fullName>
    <label>Technician Phone</label>
    <type>Phone</type>
</CustomField>